--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -48,6 +48,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5.was to print type of data for given value\n",
+    "a={33,99}\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1918608399344\n"
+     ]
+    }
+   ],
+   "source": [
+    "#was to print address of variable\n",
+    "a=393\n",
+    "print(id(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [
@@ -92,6 +130,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "fetch [39, 49]\n",
+      "modify [39, 44]\n",
+      "reinitialize [49, 103]\n",
+      "deletion\n"
+     ]
+    }
+   ],
+   "source": [
+    "#was to initialize,reinitialize the value\n",
+    "a=[39,49]\n",
+    "print('fetch',a)\n",
+    "a[1]=44\n",
+    "print('modify',a)\n",
+    "a=[49,103]\n",
+    "print('reinitialize',a)\n",
+    "del(a)\n",
+    "print('deletion')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "20\n",
       "['2', '0']\n",
       "20\n"
@@ -125,7 +192,7 @@
     }
    ],
    "source": [
-    "#to concate multi value datatype\n",
+    "#to concate two multi value datatype\n",
     "a='hello'\n",
     "a+='world'\n",
     "print(a)\n",
@@ -137,6 +204,25 @@
     "x={'10':20,30:'str',}\n",
     "x|={'a':33}\n",
     "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to check length of the collection\n",
+    "d=[999,333,444,222,777]\n",
+    "print(len(d))"
    ]
   },
   {
@@ -157,7 +243,24 @@
    "source": [
     "#wap to find middle value of the given collection\n",
     "d=[999,333,444,222,777]\n",
-    "print(d[len(d)//2])\n",
+    "print(d[len(d)//2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starthings\n",
+      "start at middle of ings\n"
+     ]
+    }
+   ],
+   "source": [
     "#wap to concate new string into middle of the existing string\n",
     "var='starthings'\n",
     "print(var)\n",
@@ -225,13 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "4\n",
       "4\n",
       "False\n"
      ]
@@ -241,10 +345,75 @@
     "# wap to extract last digit from a given number using type casting\n",
     "a=23454\n",
     "print(str(a)[-1])\n",
+    "print(a%10)\n",
     "\n",
     "'''wap to check the given number is divisible by 3 using type casting  '''\n",
     "n=2026\n",
     "print(int(str(n))%3==0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 20, 93, 10]\n",
+      "(20, 93, 10, 'a', 'b', 'c', 20, 93, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to concate list and tuple values by using typecasting\n",
+    "a=['a','b','c']\n",
+    "b=(20,93,10)\n",
+    "a+=b\n",
+    "print(a)\n",
+    "b+=tuple(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 20, 93, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to concate list value and tuple value without using type casting\n",
+    "a=['a','b','c']\n",
+    "b=(20,93,10)\n",
+    "a+=b\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to check the given number is less than or equals to 100\n",
+    "a=77;b=498\n",
+    "print(a<=100,b<=100)"
    ]
   },
   {
@@ -292,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +479,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[74], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(s\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(a\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[39mprint\u001b[39m(b\u001b[39m*\u001b[39;49m\u001b[39m6\u001b[39;49m)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(c\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[39m# unsuported operand * for set and dict\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[13], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(s\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(a\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[39mprint\u001b[39m(b\u001b[39m*\u001b[39;49m\u001b[39m6\u001b[39;49m)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(c\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[39m# unsuported operand * for set and dict\u001b[39;00m\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'set' and 'int'"
      ]
     }
@@ -342,11 +511,11 @@
     }
    ],
    "source": [
-    "# to check the given number is divisible by 3 and also should be greater than 22\n",
+    "# 63:to check the given number is divisible by 3 and also should be greater than 22\n",
     "a=333;b=18\n",
     "print(a%3==0 and a>22)\n",
     "print(b%3==0 and b>22)\n",
-    "# to check the length of the collection is even or not\n",
+    "#64: to check the length of the collection is even or not\n",
     "g='imran khan'\n",
     "print(len(g))\n",
     "print(('not even','even')[len(g)%2==0])"
@@ -367,11 +536,30 @@
     }
    ],
    "source": [
-    "#to check the length of the collection is less than 55 and greater than 16\n",
+    "#65:to check the length of the collection is less than 55 and greater than 16\n",
     "a='abcdefghijklmnopqrsturwxyz'\n",
     "print(len(a)>16 and len(a)<55)\n",
     "# or\n",
     "print(16<len(a)<55)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#66:to check perform the length fo the collection is divisible by 5 and odd\n",
+    "a='abcdefghijklmnopqrsturwxyz'\n",
+    "print(len(a)%5 and len(a)%2!=0)"
    ]
   },
   {
@@ -389,7 +577,7 @@
     }
    ],
    "source": [
-    "# find the type of data by extracting the middle position of the collection. either 'str','list','tuple'ArithmeticError\n",
+    "#67: find the type of data by extracting the middle position of the collection. either 'str','list','tuple'ArithmeticError\n",
     "a=[10,('a','b'),[10,20]]\n",
     "print(type(a[len(a)//2]))\n",
     "c=type(a[len(a)//2])\n",
@@ -817,14 +1005,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
@@ -867,14 +1055,14 @@
     }
    ],
    "source": [
-    "#91: to check the charecter is special charecter or not\n",
+    "#93: to check the charecter is special charecter or not\n",
     "a='$'\n",
     "print(not('a'<=a<='z' or 'A'<=a<='Z' or '0'<=a<='9'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +1076,7 @@
    "source": [
     "#94: to check given charecter should not be upper_case\n",
     "a='D';b='a'\n",
-    "print(not('A'<=a<='Z'), not('A'<=b<='Z'))"
+    "print(not  ('A'<=a<='Z'), not('A'<=b<='Z'))"
    ]
   },
   {
@@ -912,26 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False False\n"
-     ]
-    }
-   ],
-   "source": [
-    "#96: to check given charecter should not be a alphabet\n",
-    "a='D';b='a'\n",
-    "print(not('A'<=a<='Z'), not('a'<=b<='z'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -943,9 +1112,31 @@
     }
    ],
    "source": [
+    "#96: to check given charecter should not be a alphabet\n",
+    "a='D';b='2'\n",
+    "print(not('A'<=a<='Z'), not('a'<=b<='z'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
     "#97: to check given charecter should not be a ASCII number\n",
     "a='3'\n",
-    "print(not('0'<=a<='9'))\n"
+    "print(not('0'<=a<='9'))\n",
+    "b='h'\n",
+    "print(0<=ord(b)<48 or 57<ord(b)<=127)"
    ]
   },
   {
@@ -1038,21 +1229,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "imran_7777\n",
-      "imran_7777\n"
+      "i\n",
+      "i\n",
+      "i\n"
      ]
     }
    ],
    "source": [
     "#101: to conver the given character upper_case to lower_case\n",
-    "a='IMRAN_7777'\n",
+    "a='I'\n",
+    "print(chr(ord(a)+32))\n",
     "print(a.lower())\n",
     "print(a.swapcase())\n"
    ]
@@ -1175,7 +1368,7 @@
     }
    ],
    "source": [
-    "#106: to check the given character is converted to ASCII value the value is even as well as the character should be uppercase\n",
+    "#106: to check the given character is converted to ASCII value the value is odd as well as the character should be uppercase\n",
     "a='D'\n",
     "print( len(a)==1 and ord(a)%2==0  and 'A'<=a<='Z')\n",
     "a='E'\n",
