--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1369,10 +1369,10 @@
    ],
    "source": [
     "#106: to check the given character is converted to ASCII value the value is odd as well as the character should be uppercase\n",
-    "a='D'\n",
-    "print( len(a)==1 and ord(a)%2==0  and 'A'<=a<='Z')\n",
-    "a='E'\n",
-    "print(len(a)==1 and ord(a)%2==0 and  'Z'<=a<='Z')\n"
+    "a='A'\n",
+    "print( len(a)==1 and ord(a)%2==1  and 'A'<=a<='Z')\n",
+    "a='B'\n",
+    "print(len(a)==1 and ord(a)%2==1 and  'Z'<=a<='Z')\n"
    ]
   },
   {
@@ -1472,7 +1472,7 @@
     }
    ],
    "source": [
-    "#111: wae to given number is increased by 1\n",
+    "#111: wae to  given number is increased by 1\n",
     "a=10\n",
     "a+=1\n",
     "print(a)\n",
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,8 @@
      "output_type": "stream",
      "text": [
       "9\n",
-      "9\n"
+      "9\n",
+      "38\n"
      ]
     }
    ],
@@ -1524,15 +1525,17 @@
     "#113: wae to given number is decrease by 1\n",
     "a=10\n",
     "a+=-1\n",
-    "print(a)\n",
+    "print(a )\n",
     "b=10\n",
     "b=b-1\n",
-    "print(b)\n"
+    "print(b)\n",
+    "c=39\n",
+    "print(c-1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1543,8 @@
      "output_type": "stream",
      "text": [
       "7\n",
-      "7\n"
+      "7\n",
+      "4\n"
      ]
     }
    ],
@@ -1552,6 +1556,7 @@
     "b=10\n",
     "b=b-3\n",
     "print(b)\n",
+    "print(b-3)\n",
     "\n"
    ]
   },
@@ -1577,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1597,8 @@
     "#116: WAE to check perform the addition operation on A value and B value and final result should be updated to A\n",
     "A=50\n",
     "B=60\n",
-    "A=A+B # OR A+=B\n",
+    "#A=A+B \n",
+    "A+=B\n",
     "print(A)"
    ]
   },
@@ -1637,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1677,15 +1683,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'>\n",
-      "<class 'type'>\n",
+      "True\n",
       "True\n"
      ]
     }
@@ -1693,14 +1698,13 @@
    "source": [
     "#120: wae to check given value is integer value or not\n",
     "b=15\n",
-    "print(type(b))\n",
-    "print(type(int))\n",
-    "print(type(b)==int)"
+    "print(type(b)==int) #or\n",
+    "print(type(b) is int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1709,6 +1713,7 @@
      "text": [
       "<class 'str'>\n",
       "<class 'type'>\n",
+      "True\n",
       "True\n"
      ]
     }
@@ -1718,12 +1723,13 @@
     "b='15'\n",
     "print(type(b))\n",
     "print(type(str))\n",
-    "print(type(b)==str)"
+    "print(type(b)==str) #or\n",
+    "print(type(b) is str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1737,30 +1743,35 @@
    ],
    "source": [
     "#122: wae to check given value is single value or not (/ int/float/complex/boolean/Non)\n",
-    "c=b'1010';b='str'\n",
+    "c=b'1010';b='stringvalue'\n",
     "print(type(c) in [int,float,complex,bool,bytes,type(None)])\n",
     "print(type(b) in [int,float,complex,bool,bytes,type(None)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
       "True\n",
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "#123: wae to check given value should not be a single value\n",
     "c=b'1010';b='str'\n",
-    "print(type(c) not in [str,list,tuple,set,dict])\n",
-    "print(type(b) not in [str,list,tuple,set,dict])\n"
+    "print(type(c) not in [int,float,complex,bytes,bool])\n",
+    "print(type(b) not in [int,float,complex,bytes,bool]) #or\n",
+    "print(type(c)  in [str,list,tuple,set,dict])\n",
+    "print(type(b)  in [str,list,tuple,set,dict])\n",
+    "\n"
    ]
   },
   {
@@ -1807,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1834,8 @@
     "#126: wae to check the given value is an immutable or not\n",
     "c=56;b=['str',5678]\n",
     "print(type(c) not in [list,set,dict])\n",
-    "print(type(b) not in [list,set,dict])\n"
+    "print(type(b) not in [list,set,dict]) #or\n",
+    "\n"
    ]
   },
   {
@@ -2064,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2093,7 @@
      "text": [
       "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
       "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "C:\\Users\\Shaik Imran\\AppData\\Local\\Temp\\ipykernel_33064\\4164406787.py:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "C:\\Users\\Shaik Imran\\AppData\\Local\\Temp\\ipykernel_32428\\2300306636.py:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
       "  print(257 is 257)\n"
      ]
     }
