--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -2125,6 +2125,325 @@
     "b=256\n",
     "print(type(a)==int and type(b)==int and a is b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "negative value\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to check whether given number is positive or not.\n",
+    "n=-10\n",
+    "if 0<=n:\n",
+    "    print('given value is positive')\n",
+    "else:\n",
+    "    print('negative value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even number: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to check given value is even or not . if even diplay  given value is even value eith given value\n",
+    "n=4\n",
+    "if n%2==0:\n",
+    "    print('even number:',n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18 even number:\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to check given value is even or not . if even diplay  given value is even value eith given value\n",
+    "n=18\n",
+    "if n%2==0:\n",
+    "    print(n,'even number:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18 even number:\n",
+      "(n) even number:\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to check given value is even or not . if even diplay  given value is even value eith given value\n",
+    "n=18\n",
+    "if n%2==0:\n",
+    "    print( f'{n} even number:') # dynamic string formate\n",
+    "    print( f'(n) even number:') # dynamic string formate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19 odd number:\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to check given value is even or not . if even diplay  given value is even value eith given value\n",
+    "n=19\n",
+    "if n%2!=0:\n",
+    "    print(n,'odd number:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "given  value last digit is greater than 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to check whether the last digit of the given number is greater than 5 or not\n",
+    "n=158\n",
+    "if (n%10>5):\n",
+    "    print(f'given  value last digit is greater than 5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(156+0j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to check wether given value is divisible by 2 and 6 . if condition is satisfied to convert given number to complex and display value\n",
+    "n=156\n",
+    "if (n%2==0 and n%6==0):\n",
+    "    b=complex(n)\n",
+    "    print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to check wether given intiger is divisible by 4 and value should be in range of 48 to 122 and value is even. if condition is true convert given value to charecter\n",
+    "n=80\n",
+    "if(n%4==0  and 48<=n<122 and n%2==0):\n",
+    "    print(chr(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1289218754304\n",
+      "[44, 55] 1289218754304\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to check the given value is mutable or not if mutable. store the value inside the list without changing existing memory block address\n",
+    "n=[44]\n",
+    "print(id(n))\n",
+    "if (type(n)   in (list,set,dict) ):\n",
+    "    n+=[55]\n",
+    "    print(n,id(n))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 10, 20]\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to check the given value is \n",
+    "n=[10,20]\n",
+    "temp=['a','b','c']\n",
+    "if (type(n)   in (list,set,dict) ):\n",
+    "    temp+=n                #extending list\n",
+    "    print(temp)\n",
+    "\n",
+    "l=[10,20]\n",
+    "t={'a','b'}\n",
+    "print(l.extend(t))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', [10, 20]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to check the given value is \n",
+    "n=[10,20]\n",
+    "temp=['a','b','c']\n",
+    "if (type(n)   in (list,set,dict) ):\n",
+    "    temp+=[n]            #appending value\n",
+    "    print(temp)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 'a', 'b']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[10,20]\n",
+    "t={'a','b'}\n",
+    "l.extend(t)\n",
+    "print(l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, {'a', 'b'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[10,20]\n",
+    "t={'a','b'}\n",
+    "l.append(t)\n",
+    "print(l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, {'a', 'b'}, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[10,20]\n",
+    "t={'a','b'}\n",
+    "l.insert(1,t)\n",
+    "print(l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, {'a', 'b'}, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to insert the value in specific position\n",
+    "l=[10,20]\n",
+    "t={'a','b'}\n",
+    "if (type(l) in (list,set,dict)):\n",
+    "    l[1:1]=[t]\n",
+    "    print(l)\n"
+   ]
   }
  ],
  "metadata": {
