--- a/Qns&Anwrs/simple_if.ipynb
+++ b/Qns&Anwrs/simple_if.ipynb
@@ -368,24 +368,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "6\n",
+      "6\n"
      ]
     }
    ],
    "source": [
     "#19:wap to check whether a given value is a negative or even number. if satisfied, display the last digit of the values.\n",
-    "n=-59\n",
+    "n=-16\n",
     "if n<0 or n%2==0 :\n",
     "    \n",
     "    print(int(str(n)[-1]))\n",
-    "    #print(n%10)\n"
+    "    print(-n%10)\n"
    ]
   },
   {
@@ -469,6 +470,231 @@
     "if 25<n<100 and n%4==0 and n%5==0 :\n",
     "    print(n*5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#24:wap to check whether a given number is an integer and odd number.if the condition is satisfied, the integer is divisible by 5 and display the result\n",
+    "n=77\n",
+    "if type(n)==int and n%2!=0:\n",
+    "    print(n/5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77 <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#25:wap to check whether a given value is an integer or not. if integer, the given value is converted to string and displays the result.\n",
+    "n=77\n",
+    "if type(n)==int :\n",
+    "    n=str(n)\n",
+    "    print(n,type(n))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r\n"
+     ]
+    }
+   ],
+   "source": [
+    "#26:wap to check whether a given value is less then 125 and greater than 60 or not. if the condition is satisfied,take the name and extract the middle character and display it.\n",
+    "n=77\n",
+    "if 60<n<125:\n",
+    "    name=input('enter your name:')\n",
+    "    print(name[len(name)//2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "154\n"
+     ]
+    }
+   ],
+   "source": [
+    "#27:wap to check whether a given two integers are equal or not. if both are equal, to perform addition and display the result.\n",
+    "a=77\n",
+    "b=77\n",
+    "if a==b:\n",
+    "    print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#28:wap to check whether two  values are equal or not. if equal, to perform multiplication of two numbers and thant result is division by 3 and display the value.\n",
+    "n=3\n",
+    "a=3\n",
+    "if n==a:\n",
+    "    b=a*n\n",
+    "    print(b/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 65}\n",
+      "{'A': 65}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#29:wap to check whether a character is in the alphabet or not. if the alphabet, store the value inside the dict(key as a character and value as an ascii value)\n",
+    "n='A'\n",
+    "if 'a'<=n<='z'or 'A'<=n<='Z':\n",
+    "    n=((n,ord(n)),)\n",
+    "    print( dict(n))\n",
+    "b='A'\n",
+    "d={b:ord(b)}\n",
+    "print(d)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "30.WAP to check whether a character is in the uppercase or not. If the uppercase, \n",
+    "store the value inside the dict(key as a character and value as an ascii value)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "{'a': 97}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#31:wap to check whether a character is in the uppercase or not. if the uppersase convert to lowercase and store the value inside the dict(key as a character and value as an ascii value)\n",
+    "n='A'\n",
+    "if 'A'<=n<='Z':\n",
+    "    a=chr(ord(n)+32)\n",
+    "    res={a:ord(n)+32}\n",
+    "    print(a)\n",
+    "    print(res)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaaaaaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "#32:wap to check whether a character is in the lowercase or not. if the lowercase, to perform the replication operation on that character.\n",
+    "n='a'\n",
+    "if 'a'<=n<='z':\n",
+    "    print(n*7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#33:wap to check whether a character is in the ascii number or not. if the ascii number. to convert into interger.\n",
+    "n='9'\n",
+    "if '0'<=n<='9':\n",
+    "    print(int(n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "34.WAP to check whether a character is in the special symbol or not. If the special \n",
+    "symbol, to display a symbol with ascii value.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
