--- a/Qns&Anwrs/simple_if.ipynb
+++ b/Qns&Anwrs/simple_if.ipynb
@@ -695,6 +695,125 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap enven or odd, if true perform square of value,are else cube of the givne value\n",
+    "n=3\n",
+    "if n%2==0:\n",
+    "    print(n**2)\n",
+    "else:\n",
+    "    print(n**3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "wap to check wether given value is multivalue data type or not if it is multi value , to store the value inside set or else to convert into string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{332: 453, 2323: 44}\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=[332,453,2323,44]\n",
+    "a=set()\n",
+    "if type(n) in (str,list,tuple,set,dict):\n",
+    "    a|=set(n)\n",
+    "    print(a)\n",
+    "else:\n",
+    "  print(str(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mad\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to check given string is polindrome or not if polindrome print zeroth position to middle of the string, else display the rever string\n",
+    "n='madam' # n='level'\n",
+    "if n==n[::-1]:\n",
+    "    print(n[0:(len(n)//2)+1])\n",
+    "else:\n",
+    "    print(n[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "wap to check starting character and middle char both are sequence or not , if sequence extract two characters and concate into given string.\n",
+    "if not sequence, display the even index position values from given string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cn\n"
+     ]
+    }
+   ],
+   "source": [
+    "n='amcan'\n",
+    "a=n[0]\n",
+    "if ord(n[0])==ord(n[len(n)//2])-1:\n",
+    "    b=n+n[:2]\n",
+    "    print(b)\n",
+    "else:\n",
+    "    print(n[2::2])"
+   ]
   }
  ],
  "metadata": {
