--- a/Qns&Anwrs/simple_if.ipynb
+++ b/Qns&Anwrs/simple_if.ipynb
@@ -691,6 +691,187 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n='#'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "35.WAP to check whether a character is an even number or not. If the even number, \n",
+    "to display an even number."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "36.WAP to check whether a Given two integers a and b, if any of the integers is 10 \n",
+    "or if their sum is 10, to perform the sum of the numbers and to display the square \n",
+    "of the result.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "37.WAP to check whether a character is in the vowel or not. If the vowel,print the \n",
+    "next character."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "38.WAP to check whether a character is in the not a vowel. If it's not a vowel,print \n",
+    "the previous character."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "39.WAP to check whether a given value is a single value data type or not. If single \n",
+    "value, display the given value as a single value data type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "40.WAP to check whether a given value is a multi-value data type or not. If multi \n",
+    "value, store the given value inside the tuple and display it.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "41.WAP to check whether a given value is an immutable data type or not. If an \n",
+    "immutable data type value, store the given value inside the set and display it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "42.WAP to check whether the middle element of a given list is odd or not. If it is odd \n",
+    "then print odd then print the number else directly print the number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "43.WAP Return a new string with \"not\" prefixed to the front of the original string. \n",
+    "Return the string unmodified if the string already has the word \"not\" at the \n",
+    "beginning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "44.WAP to check whether a given string(str) and one integer(n) value, to display a \n",
+    "new string that is devoid of the character at index n. if you are given a non-empty \n",
+    "string and an int n. The value of n will be a legitimate character index from the \n",
+    "original string, therefore it will fall within the range of 0 to len(str)-1, inclusive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "45.WAP to check whether the two variables are pointing to the same memory \n",
+    "location or not if they are pointing to the same memory location then print the \n",
+    "address of both the variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "46.WAP to check whether the given length of the string is even or not. If the \n",
+    "condition is satisfied, display the sequence of characters from zero position to \n",
+    "length of collection -2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "47.WAP to check whether the two given strings are having the same values or not. \n",
+    "If both are not the same values then swap the values of one variable to another \n",
+    "variable after swapping print the two values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "48.WAP to check whether a given character is a special symbol or not. If satisfied, \n",
+    "store the symbol as a key and value as a ascii value of the given character inside \n",
+    "the dictionary.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "49.WAP to check whether a given key is not present in the dictionary or not. If the \n",
+    "key is not present, ap\n",
+    "pend the new key inside the dictionary.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "50.WAP whether a given string, and it displays a new string with the first and last \n",
+    "characters switched."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "51.WAP to check whether the last digit should be 2 in the given number then print \n",
+    "the last digit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "52.WAP to check whether a Given two integers a and b, if any of the integers is 10 \n",
+    "or if their sum is 10, to perform the sum of the numbers and to display the square \n",
+    "of the result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "53.WAP to check whether a given string(str) and one integer(n) value, to display a \n",
+    "new string that is devoid of the character at index n. if you are given a non-empty \n",
+    "string and an int n. The value of n will be a legitimate character index from the \n",
+    "original string, therefore it will fall within the range of 0 to len(str)-1, inclusive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "54.WAP to check whether both string collections are equal or not if it is not equal \n",
+    "print the both strings along with the length of a string if both are equal ignore it."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
